taiwan_signals_output_202601151307.txt
====================================================================================================
批量运行所有台股交易信号生成器
====================================================================================================
生成时间: 2026-01-15 13:07:35
总共 62 个台股
====================================================================================================

进度: [1/62]

====================================================================================================
运行: 1101 台泥
====================================================================================================
[X] 运行失败:
  File "C:\Users\Silvi\Projects\trading-bot\get_trading_signal_1101.py", line 662
    print(f"   {get_model_accuracy_display('1101.TW')}")    else:
                                                            ^^^^
SyntaxError: invalid syntax


进度: [2/62]

====================================================================================================
运行: 1303 南亞
====================================================================================================
[X] 运行失败:
  File "C:\Users\Silvi\Projects\trading-bot\get_trading_signal_1303.py", line 662
    print(f"   {get_model_accuracy_display('1303.TW')}")    else:
                                                            ^^^^
SyntaxError: invalid syntax


进度: [3/62]

====================================================================================================
运行: 1519 台股
====================================================================================================
[X] 运行失败:
  File "C:\Users\Silvi\Projects\trading-bot\get_trading_signal_1519.py", line 694
    print(f"   {get_model_accuracy_display('1519.TW')}")    else:
                                                            ^^^^
SyntaxError: invalid syntax


进度: [4/62]

====================================================================================================
运行: 1605 華新
====================================================================================================
[X] 运行失败:
  File "C:\Users\Silvi\Projects\trading-bot\get_trading_signal_1605.py", line 662
    print(f"   {get_model_accuracy_display('1605.TW')}")    else:
                                                            ^^^^
SyntaxError: invalid syntax


进度: [5/62]

====================================================================================================
运行: 2303 聯電
====================================================================================================
[X] 运行失败:
  File "C:\Users\Silvi\Projects\trading-bot\get_trading_signal_2303.py", line 662
    print(f"   {get_model_accuracy_display('2303.TW')}")    else:
                                                            ^^^^
SyntaxError: invalid syntax


进度: [6/62]

====================================================================================================
运行: 2308 台達電
====================================================================================================
[X] 运行失败:
  File "C:\Users\Silvi\Projects\trading-bot\get_trading_signal_2308.py", line 694
    print(f"   {get_model_accuracy_display('2308.TW')}")    else:
                                                            ^^^^
SyntaxError: invalid syntax


进度: [7/62]

====================================================================================================
运行: 2313 華通
====================================================================================================
[X] 运行失败:
  File "C:\Users\Silvi\Projects\trading-bot\get_trading_signal_2313.py", line 662
    print(f"   {get_model_accuracy_display('2313.TW')}")    else:
                                                            ^^^^
SyntaxError: invalid syntax


进度: [8/62]

====================================================================================================
运行: 2317 鴻海
====================================================================================================
[X] 运行失败:
  File "C:\Users\Silvi\Projects\trading-bot\get_trading_signal_2317.py", line 694
    print(f"   {get_model_accuracy_display('2317.TW')}")    else:
                                                            ^^^^
SyntaxError: invalid syntax


进度: [9/62]

====================================================================================================
运行: 2327 國巨
====================================================================================================
[X] 运行失败:
  File "C:\Users\Silvi\Projects\trading-bot\get_trading_signal_2327.py", line 662
    print(f"   {get_model_accuracy_display('2327.TW')}")    else:
                                                            ^^^^
SyntaxError: invalid syntax


进度: [10/62]

====================================================================================================
运行: 2330 台積電
====================================================================================================
================================================================================
🤖 台股 2330 (台積電) AI 交易信号生成器
================================================================================
生成时间: 2026-01-15 13:07:49
模型準確度: 🟢 AI準確度: 72.7/100
================================================================================

📦 加载 AI 模型: C:\Users\Silvi\Projects\trading-bot\ppo_2330_tw_improved
✅ 模型加载成功!

📊 下载最新市场数据...
✅ 成功下载 90 天数据

🔧 计算技术指标...
✅ 最新数据日期: 2026-01-15
   当前价格: NT$1685.00
   今日成交量: 26,530,120

🧠 AI 模型分析中...

================================================================================
📊 技术指标分析
================================================================================
RSI (14):        78.79  [超买]
MACD:            65.5773
MACD Signal:     56.2729  [金叉]
SMA 10:          NT$1679.50
SMA 30:          NT$1542.85  [多头]
SMA 50:          NT$1542.85
布林带上轨:      NT$1796.76
布林带下轨:      NT$1367.74
当前价格位置:    73.9% (布林带内)
成交量:          26,530,120
20日平均量:      31,478,901  [正常]
量比:            0.84x

================================================================================
📈 MA50趨勢分析
================================================================================
當前MA50:        NT$1498.20
MA50斜率:        +4.020000
斜率百分比:      +0.2683%
趨勢判斷:        🟢 強勢上升
交易信號:        強烈買入信號

💡 說明: MA50強勢上揚，趨勢明確向上
✅ 已加载 2330.TW 的特征重要性数据

📊 2330.TW 动态权重计算结果:
   特征重要性总和: 0.5762
   权重分配:
     • rsi         :   3 分 (特征重要性:  2.98%)
     • macd        :  17 分 (特征重要性: 14.13%)
     • ma_trend    :  45 分 (特征重要性: 37.42%)
     • bb_position :   3 分 (特征重要性:  3.09%)
     • price_vs_ma :  10 分 (特征重要性:  0.00%)
     • volume      :  30 分 (固定)

================================================================================
📰 市场情绪分析 (FinBERT NLP Engine)
================================================================================
   ⚠️  加载手动标注失败: Expecting value: line 1 column 1 (char 0)
🤖 正在初始化 FinBERT 模型...
✅ FinBERT 模型载入完成！

============================================================
📰 分析 2330.TW 的市场情绪
   搜索关键字: TSM
============================================================

📊 分析结果:
   新闻数量: 10
   情绪分数: +0.206
   情绪判断: 📈 正面

📰 热点新闻:
   1. Dow Jones Futures: Market Split With Tesla, Broadcom, AppLovin Key Losers; Nvidi...
   2. Should You Forget Nvidia and Buy These 2 Artificial Intelligence (AI) Stocks Ins...
   3. SK Hynix Bets $13 Billion To Lock In AI Memory Dominance...
================================================================================
🗞️  市场情绪分析 (FinBERT)
================================================================================
新闻数量:     10 则
情绪分数:     +0.206
情绪判断:     正面
评分调整:     +10 分

📰 热点新闻:
   1. Dow Jones Futures: Market Split With Tesla, Broadcom, AppLovin Key Los...
   2. Should You Forget Nvidia and Buy These 2 Artificial Intelligence (AI) ...
   3. SK Hynix Bets $13 Billion To Lock In AI Memory Dominance

================================================================================
📊 蠟燭圖型態分析
================================================================================
================================================================================
📊 蠟燭圖型態分析
================================================================================
   最新型態: 下降缺口
   出現日期: 2026-01-15
   最近5天出現2個看跌型態，偏空頭

   看跌訊號 (2):
      • 吊人線 (出現1次)
      • 下降缺口 (出現1次)

   今日型態:
      😵 吊人線 - 高檔懸空警訊
      ✨ 標準十字 - 多空平衡
      📉 下降缺口 (缺口: 5.00)

型態評分調整: -7.0 分

================================================================================
🎯 AI 交易信号
================================================================================
模型输出动作值: +0.0636

🟡 信号: 持有 (HOLD)
   市场观望,暂不操作

   💡 操作建议:
      • 继续观察市场走势
      • 关注支撑位: NT$1367.74
      • 关注压力位: NT$1796.76

================================================================================
⚠️  风险提示
================================================================================
   • 本信号由 AI 模型生成,仅供参考,不构成投资建议
   • 股市有风险,投资需谨慎
   • 请根据自身风险承受能力做出投资决策
   • 建议结合其他分析方法综合判断
================================================================================

✅ 信号生成成功!

📱 快速摘要:
   股票: 2330.TW (台積電)
   日期: 2026-01-15
   价格: NT$1685.00
   信号: 持有 (HOLD)
   🟢 AI準確度: 72.7/100


进度: [11/62]

====================================================================================================
运行: 2337 旺宏
====================================================================================================
[X] 运行失败:
  File "C:\Users\Silvi\Projects\trading-bot\get_trading_signal_2337.py", line 662
    print(f"   {get_model_accuracy_display('2337.TW')}")    else:
                                                            ^^^^
SyntaxError: invalid syntax


进度: [12/62]

====================================================================================================
运行: 2344 華邦電
====================================================================================================
